--- a/index.html
+++ b/index.html
@@ -8,58 +8,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:'Poppins',sans-serif;
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
 
 body{
   height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  text-align:center;
   background:linear-gradient(135deg,#ff9a9e,#fad0c4);
   overflow:hidden;
-  flex-direction:column;
   color:white;
+  text-align:center;
+  transition:0.5s;
 }
 
-/* Floating Hearts */
-.heart{
-  position:absolute;
-  width:20px;
-  height:20px;
-  background:red;
-  transform:rotate(45deg);
-  animation:float 6s infinite ease-in;
-}
-
-.heart::before,
-.heart::after{
-  content:"";
-  width:20px;
-  height:20px;
-  background:red;
-  border-radius:50%;
-  position:absolute;
-}
-
-.heart::before{
-  top:-10px;
-  left:0;
-}
-
-.heart::after{
-  left:-10px;
-  top:0;
-}
-
-@keyframes float{
-  0%{bottom:-50px; opacity:1;}
-  100%{bottom:100vh; opacity:0;}
+/* Glow effect */
+body.glow{
+  box-shadow:inset 0 0 200px rgba(255,255,255,0.6);
 }
 
 /* Card */
@@ -69,18 +34,16 @@ body{
   padding:30px;
   border-radius:20px;
   box-shadow:0 10px 30px rgba(0,0,0,0.2);
-  max-width:350px;
-  animation:fadeIn 2s ease;
+  max-width:360px;
+  position:relative;
+  z-index:2;
 }
 
-h1{
-  font-size:28px;
-  margin-bottom:10px;
-}
+h1{font-size:24px;margin-bottom:10px;}
 
 button{
   margin-top:20px;
-  padding:10px 20px;
+  padding:12px 25px;
   border:none;
   border-radius:30px;
   background:white;
@@ -90,27 +53,79 @@ button{
   transition:0.3s;
 }
 
-button:hover{
-  transform:scale(1.1);
-  background:#ffe3e6;
-}
+button:hover{transform:scale(1.1);}
 
 .message{
   margin-top:20px;
   font-size:14px;
   display:none;
-  animation:fadeIn 2s ease;
 }
 
-@keyframes fadeIn{
-  from{opacity:0; transform:translateY(20px);}
-  to{opacity:1; transform:translateY(0);}
-}
-
-.footer{
+/* Teddy Animation */
+.teddy-container{
+  position:relative;
+  height:80px;
   margin-top:15px;
-  font-size:12px;
-  opacity:0.9;
+}
+
+.teddy{
+  font-size:50px;
+  position:absolute;
+  top:0;
+}
+
+#teddyLeft{left:-100px;}
+#teddyRight{right:-100px;}
+
+.hugLeft{
+  animation:leftMove 2s forwards;
+}
+
+.hugRight{
+  animation:rightMove 2s forwards;
+}
+
+@keyframes leftMove{
+  to{left:35%;}
+}
+
+@keyframes rightMove{
+  to{right:35%;}
+}
+
+/* Confetti */
+.confetti{
+  position:absolute;
+  width:8px;
+  height:8px;
+  background:red;
+  top:-10px;
+  animation:fall 3s linear forwards;
+  opacity:0.8;
+}
+
+@keyframes fall{
+  to{transform:translateY(100vh) rotate(360deg);}
+}
+
+/* Popup */
+.popup{
+  position:fixed;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  background:white;
+  color:#ff4b5c;
+  padding:20px;
+  border-radius:15px;
+  display:none;
+  z-index:5;
+}
+
+.popup button{
+  background:#ff4b5c;
+  color:white;
+  margin-top:10px;
 }
 </style>
 </head>
@@ -121,43 +136,68 @@ button:hover{
   <h1>Happy Hug Day Bhavya 🤗❤️</h1>
   <p>You are my safest place, my warmest hug, my forever comfort.</p>
   
-  <button onclick="revealLove()">Click for a Hug 🤍</button>
+  <button onclick="startLove()">Click for a Hug 🤍</button>
 
   <div class="message" id="loveMessage">
+    
+    <div class="teddy-container">
+      <div class="teddy" id="teddyLeft">🧸</div>
+      <div class="teddy" id="teddyRight">🧸</div>
+    </div>
+
     <p>
-      A hug from you feels like home.  
-      When you hold me, the world disappears.  
-      Your arms are my favorite place to stay.  
-      I wish I could pause time in that moment.  
-      If love had a shape, it would be your hug.  
-      Thank you for being my peace, my smile, my everything.  
+      A hug from you feels like home.<br>
+      When you hold me, the world disappears.<br>
+      Your arms are my favorite place to stay.<br>
+      I wish I could pause time in that moment.<br>
+      If love had a shape, it would be your hug.<br>
+      Thank you for being my peace, my smile, my everything.<br>
       I love you more than words can ever explain.
     </p>
-    <div class="footer">Forever Yours, <b>From Dudu 💖</b></div>
-  </div>
 
-  <button onclick="playSong()">Play Our Song 🎵</button>
+    <b>Forever Yours — From Dudu 💖</b>
+  </div>
+</div>
+
+<div class="popup" id="popup">
+  <h3>Will you hug me forever? 🤍</h3>
+  <button onclick="closePopup()">Always ❤️</button>
 </div>
 
 <audio id="bgSong" src="song.mp3"></audio>
 
 <script>
-function revealLove(){
+function startLove(){
   document.getElementById("loveMessage").style.display="block";
+  document.body.classList.add("glow");
+
+  // Play song
+  document.getElementById("bgSong").play();
+
+  // Teddy animation
+  document.getElementById("teddyLeft").classList.add("hugLeft");
+  document.getElementById("teddyRight").classList.add("hugRight");
+
+  // Confetti (limited amount)
+  for(let i=0;i<30;i++){
+    let conf=document.createElement("div");
+    conf.classList.add("confetti");
+    conf.style.left=Math.random()*100+"vw";
+    conf.style.background=["#ff4b5c","#ff9a9e","#ffffff"][Math.floor(Math.random()*3)];
+    conf.style.animationDuration=(2+Math.random()*2)+"s";
+    document.body.appendChild(conf);
+
+    setTimeout(()=>conf.remove(),3000);
+  }
+
+  // Show popup after 2.5s
+  setTimeout(()=>{
+    document.getElementById("popup").style.display="block";
+  },2500);
 }
 
-function playSong(){
-  var song = document.getElementById("bgSong");
-  song.play();
-}
-
-/* Create Floating Hearts */
-for(let i=0;i<20;i++){
-  let heart=document.createElement("div");
-  heart.classList.add("heart");
-  heart.style.left=Math.random()*100+"vw";
-  heart.style.animationDuration=(3+Math.random()*5)+"s";
-  document.body.appendChild(heart);
+function closePopup(){
+  document.getElementById("popup").style.display="none";
 }
 </script>
 
