--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Cache Fix -->
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
+
 <title>Happy Hug Day Bhavya ❤️</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
@@ -17,29 +23,26 @@ body{
   align-items:center;
   background:linear-gradient(135deg,#ff9a9e,#fad0c4);
   overflow:hidden;
-  color:white;
   text-align:center;
-  transition:0.5s;
+  color:white;
+  transition:0.6s;
 }
 
-/* Glow effect */
 body.glow{
-  box-shadow:inset 0 0 200px rgba(255,255,255,0.6);
+  box-shadow:inset 0 0 150px rgba(255,255,255,0.7);
 }
 
-/* Card */
 .card{
-  background:rgba(255,255,255,0.15);
-  backdrop-filter:blur(10px);
+  background:rgba(255,255,255,0.18);
+  backdrop-filter:blur(12px);
   padding:30px;
   border-radius:20px;
   box-shadow:0 10px 30px rgba(0,0,0,0.2);
   max-width:360px;
-  position:relative;
   z-index:2;
 }
 
-h1{font-size:24px;margin-bottom:10px;}
+h1{margin-bottom:10px;}
 
 button{
   margin-top:20px;
@@ -53,7 +56,7 @@ button{
   transition:0.3s;
 }
 
-button:hover{transform:scale(1.1);}
+button:hover{transform:scale(1.08);}
 
 .message{
   margin-top:20px;
@@ -61,11 +64,10 @@ button:hover{transform:scale(1.1);}
   display:none;
 }
 
-/* Teddy Animation */
 .teddy-container{
   position:relative;
   height:80px;
-  margin-top:15px;
+  margin:15px 0;
 }
 
 .teddy{
@@ -74,41 +76,27 @@ button:hover{transform:scale(1.1);}
   top:0;
 }
 
-#teddyLeft{left:-100px;}
-#teddyRight{right:-100px;}
+#left{left:-120px;}
+#right{right:-120px;}
 
-.hugLeft{
-  animation:leftMove 2s forwards;
-}
+.moveLeft{animation:leftMove 2s forwards;}
+.moveRight{animation:rightMove 2s forwards;}
 
-.hugRight{
-  animation:rightMove 2s forwards;
-}
+@keyframes leftMove{to{left:35%;}}
+@keyframes rightMove{to{right:35%;}}
 
-@keyframes leftMove{
-  to{left:35%;}
-}
-
-@keyframes rightMove{
-  to{right:35%;}
-}
-
-/* Confetti */
 .confetti{
   position:absolute;
-  width:8px;
-  height:8px;
-  background:red;
+  width:6px;
+  height:6px;
   top:-10px;
   animation:fall 3s linear forwards;
-  opacity:0.8;
 }
 
 @keyframes fall{
   to{transform:translateY(100vh) rotate(360deg);}
 }
 
-/* Popup */
 .popup{
   position:fixed;
   top:50%;
@@ -125,7 +113,6 @@ button:hover{transform:scale(1.1);}
 .popup button{
   background:#ff4b5c;
   color:white;
-  margin-top:10px;
 }
 </style>
 </head>
@@ -136,13 +123,13 @@ button:hover{transform:scale(1.1);}
   <h1>Happy Hug Day Bhavya 🤗❤️</h1>
   <p>You are my safest place, my warmest hug, my forever comfort.</p>
   
-  <button onclick="startLove()">Click for a Hug 🤍</button>
+  <button id="hugBtn" onclick="startLove()">Click for a Hug 🤍</button>
 
-  <div class="message" id="loveMessage">
+  <div class="message" id="msg">
     
     <div class="teddy-container">
-      <div class="teddy" id="teddyLeft">🧸</div>
-      <div class="teddy" id="teddyRight">🧸</div>
+      <div class="teddy" id="left">🧸</div>
+      <div class="teddy" id="right">🧸</div>
     </div>
 
     <p>
@@ -155,7 +142,7 @@ button:hover{transform:scale(1.1);}
       I love you more than words can ever explain.
     </p>
 
-    <b>Forever Yours — From Dudu 💖</b>
+    <br><b>Forever Yours — From Dudu 💖</b>
   </div>
 </div>
 
@@ -164,33 +151,33 @@ button:hover{transform:scale(1.1);}
   <button onclick="closePopup()">Always ❤️</button>
 </div>
 
-<audio id="bgSong" src="song.mp3"></audio>
+<audio id="song" src="song.mp3"></audio>
 
 <script>
+let clicked=false;
+
 function startLove(){
-  document.getElementById("loveMessage").style.display="block";
+  if(clicked) return;
+  clicked=true;
+
   document.body.classList.add("glow");
+  document.getElementById("msg").style.display="block";
+  document.getElementById("song").play();
 
-  // Play song
-  document.getElementById("bgSong").play();
+  document.getElementById("left").classList.add("moveLeft");
+  document.getElementById("right").classList.add("moveRight");
 
-  // Teddy animation
-  document.getElementById("teddyLeft").classList.add("hugLeft");
-  document.getElementById("teddyRight").classList.add("hugRight");
-
-  // Confetti (limited amount)
-  for(let i=0;i<30;i++){
-    let conf=document.createElement("div");
-    conf.classList.add("confetti");
-    conf.style.left=Math.random()*100+"vw";
-    conf.style.background=["#ff4b5c","#ff9a9e","#ffffff"][Math.floor(Math.random()*3)];
-    conf.style.animationDuration=(2+Math.random()*2)+"s";
-    document.body.appendChild(conf);
-
-    setTimeout(()=>conf.remove(),3000);
+  // light confetti
+  for(let i=0;i<25;i++){
+    let c=document.createElement("div");
+    c.className="confetti";
+    c.style.left=Math.random()*100+"vw";
+    c.style.background=["#ff4b5c","#ffffff","#ff9a9e"][Math.floor(Math.random()*3)];
+    c.style.animationDuration=(2+Math.random()*2)+"s";
+    document.body.appendChild(c);
+    setTimeout(()=>c.remove(),3000);
   }
 
-  // Show popup after 2.5s
   setTimeout(()=>{
     document.getElementById("popup").style.display="block";
   },2500);
